--- a/mandelbulber2/formula/ui/difs_greek_ifs.ui
+++ b/mandelbulber2/formula/ui/difs_greek_ifs.ui
@@ -1713,6 +1713,13 @@
              </property>
             </widget>
            </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_291">
+             <property name="text">
+              <string>two col</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
         </layout>
