--- a/mandelbulber2/formula/ui/difs_greek_ifs.ui
+++ b/mandelbulber2/formula/ui/difs_greek_ifs.ui
@@ -1331,21 +1331,21 @@
         <item row="2" column="0">
          <widget class="QLabel" name="label_22">
           <property name="text">
-           <string>z.z:</string>
+           <string>c.z:</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_23">
           <property name="text">
-           <string>z.y:</string>
+           <string>c.y:</string>
           </property>
          </widget>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_24">
           <property name="text">
-           <string>z.x:</string>
+           <string>c.x:</string>
           </property>
          </widget>
         </item>
